2008-01-25 Roman
- !!!!:/UI/WebVision: The primitive "Diagram" support is added.
- FIX:/SYS/Archive/Val: No image object destroying is fixed on trend building error.
- FIX:/UI/VCAEngine: Enabling of inherited of included widget's is fixed.
- FIX:/UI/VCAEngine: Deletion and load of inherited of included widget's is fixed.
- FIX:/UI/Vision: Focuse disabling on development mode for primitive "FormEl" and mode "LineEdit" is fixed.


2008-01-22 Roman
- !:/DAQ/JavaLikeCalc: The special simbols, like '\n', support to string is added.
- !!:/Special/FLibSYS: The string parse functions, strParse() and strParsePath() is added.
- FIX:/UI/VCAEngine: Change atributes processing is fixed.
- !!:/UI/VCAEngine: Widget's attributes for events, event and evProc, made no mutable and allowed for all widgets.
- FIX:/UI/VCAEngine: Compile widget's functions errors process is fixed.
- FIX:/UI/VCAEngine: Attributes configs inherits, on modify, is fixed.
- FIX:/UI/VCAEngine: Event process on calc procedure is fixed.
- !!:/UI/VCAEngine: Events list format is changed.
- FIX:/UI/Vision: Crash on no inited cursor attributes, for primitive Diagram, is fixed.
- /SYS: Updated Demo DB.


2008-01-14 Roman
- FIX:/UI/Vision: Group widgets resizing is fixed.
- /UI/Vision: Scaling flag moved to status bar.
- /UI/Vision: The short cut CTRL+S is added, to wigets saving from keyboard.
- /UI/Vision: Links configuration is update.
- FIX:/UI/Vision: Update links on error operation to it is fixed.
- /UI/Vision: A palete widget's resizing from keyboard is added.
- FIX:/UI/Vision: Some bugs into widgets resizing is fixed.


2008-01-11 Maxim
- /SYS: The rounding of real values function (realRound) is added.
- /UI/Vision: Icon of an arrow cursor for primitive ElFig is added.
- /UI/Vision, /UI/VCAEngine: Rotation option support is added for primitive ElFig.
- /UI/Vision: Short cut CTRL+A key combination, for elements' selection, support for primitive ElFig is added.