@@ -279,7 +279,7 @@ LineEdit::LineEdit( QWidget *parent, LType tp, bool prev_dis ) :
 	bt_fld->setSizePolicy( QSizePolicy(QSizePolicy::Fixed, QSizePolicy::Fixed) );
 	bt_fld->setMaximumWidth(15);
 	//bt_fld->setMinimumSize(15,15);
-	bt_fld->setFlat( true );
+	//bt_fld->setFlat( true );
         bt_fld->setEnabled( false );
         bt_fld->setVisible( false );
         connect( bt_fld, SIGNAL( released() ), this, SLOT( applySlot() ) );
